--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "portafolio",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --watch ./index.js"
+    "start":"node app"
   },
   "repository": {
     "type": "git",
