--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "portafolio",
   "main": "index.js",
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon --watch ./index.js",
     "start":"node app"
   },
   "repository": {
