--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "portafolio",
   "main": "index.js",
   "scripts": {
-    "start":"node app"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node  ./index.js"
   },
   "repository": {
     "type": "git",
